<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="416dp"
        android:layout_height="741dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/NumberToBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_to_buy" />

            <EditText
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_cost" />

            <EditText
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Minimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum" />

            <EditText
                android:id="@+id/min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percent" />

            <EditText
                android:id="@+id/per"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/NumberToDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_buy_for_discount" />

            <EditText
                android:id="@+id/numToDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bulkDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bulk_discount" />

            <TextView
                android:id="@+id/totalBulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bulkDiscount" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/buyFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_n_savings" />

            <TextView
                android:id="@+id/totalSavings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/calculateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>